# SREngine

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  backups.rar  dev.sparcles.SREngine.desktop  dev.sparcles.SREngine.metainfo.xml  main.cpp
Android/app/src/main/cpp/: CMakeLists.txt  android_native_app_glue.c  android_native_app_glue.h  main.cpp
Engine/: CMakeLists.txt  appicon.rc  main.cpp  main.txt  main.txt2  post_build.cmake
Engine/Core/: CMakeLists.txt  Core.cxx
Engine/Core/Dependences/Framework/: Audio.cmake  CMakeLists.txt  Graphics.cmake  Helper.cmake  Physics.cmake  Scripting.cmake  Utils.cmake
Engine/Core/Dependences/Framework/Audio/: Audio.cxx  CMakeLists.txt
Engine/Core/Dependences/Framework/Depends/FbxLoader/: CMakeLists.txt
Engine/Core/Dependences/Framework/Depends/ImGuizmo/: ImGuizmo.cpp
Engine/Core/Dependences/Framework/Depends/bullet3/: BulletCollision.cmake  BulletDynamic.cmake  CMakeLists.txt  LinearMath.cmake
Engine/Core/Dependences/Framework/Depends/imgui/: CMakeLists.txt  imconfig.h  imgui.cpp  imgui.h
Engine/Core/Dependences/Framework/Physics/: CMakeLists.txt  Physics.cxx
Engine/Core/Dependences/Framework/Unity/: Audio.cxx  Graphics.cxx  Helper.cxx  ImGUI.cxx  Scripting.cxx
Engine/Core/Dependences/Framework/Utils/: CMakeLists.txt  Utils.cxx
Engine/Core/config/: codegen.xml
Engine/Core/cxx/: Codegen.cxx  Core.cxx  GUI.cxx  States.cxx
Engine/Core/inc/: API.h  Editor.h  EditorGUI.h  Engine.h  EngineCommands.h  EvoScriptAPI.h
Engine/Core/inc/Core/: Application.h  Engine.h  EngineCommands.h  EngineMigrators.h  EngineRegistration.h  EngineResources.h  EvoScriptAPI.h  Launcher.h
Engine/Core/inc/Core/Common/: Importers.h
Engine/Core/inc/Core/GUI/: About.h  AnimatorEditor.h  ComponentDrawer.h  DragNDropHelper.h  EditorCamera.h  EditorGUI.h  EditorGizmo.h  EngineSettings.h  EngineStatistics.h  FileBrowser.h  GUISystem.h  Guizmo.h  Hierarchy.h  Inspector.h  MaterialEditor.h  PhysicsMaterialEditor.h  PropertyDrawer.h  RenderTechniqueEditor.h  SceneRunner.h  SceneTools.h  SceneViewer.h  SoundDebug.h  VisualScriptEditor.h  WorldEdit.h
Engine/Core/inc/Core/Parsers/: BlueprintParser.h
Engine/Core/inc/Core/Settings/: EditorSettings.h
Engine/Core/inc/Core/States/: ChunkSystemState.h  DeltaTimeState.h  DrawState.h  InitializeState.h  PollEventsState.h  PrepareState.h  SceneUpdateState.h  StopState.h  SubmitState.h
Engine/Core/inc/Core/Tests/: AtlasBuilderTest.h  HTMLTest.h  TestManager.h
Engine/Core/inc/Core/UI/: Button.h  IButton.h
Engine/Core/inc/Core/Utils/: GraphicsResourceReloader.h
Engine/Core/inc/Core/World/: EngineScene.h  SceneInitializer.h  VisualChunk.h  VisualRegion.h  World.h
Engine/Core/inc/GUI/: Canvas.h  ComponentDrawer.h  EditorGUI.h  EngineSettings.h  EngineStatistics.h  FileBrowser.h  GUISystem.h  Hierarchy.h  Inspector.h  SceneViewer.h  VisualScriptEditor.h  WorldEdit.h
Engine/Core/inc/World/: VisualChunk.h  VisualRegion.h  World.h
Engine/Core/libs/Audio/: Audio.cxx  CMakeLists.txt
Engine/Core/libs/Graphics/: CMakeLists.txt  GUI.cxx  Graphics.cxx  ImGUI.cxx  Pass.cxx  SRSL.cxx  freetype.cmake
Engine/Core/libs/Graphics/cxx/: Animations.cxx  GUI.cxx  Graphics.cxx  ImGUI.cxx  Pass.cxx  SRSL.cxx
Engine/Core/libs/Physics/: CMakeLists.txt  Physics.cxx
Engine/Core/libs/Scripting/: CMakeLists.txt  Scripting.cxx
Engine/Core/libs/Utils/: CMakeLists.txt  ECS.cxx  ICU.cxx  Utils.cxx  World.cxx
Engine/Core/libs/Utils/cmake/: CopyFiles.cmake
Engine/Core/libs/Utils/cxx/: Common.cxx  ECS.cxx  ICU.cxx  Platform.cxx  Types.cxx  Utils.cxx  World.cxx
Engine/Core/src/: API.cpp  EditorGUI.cpp  Engine.cpp  EngineCommands.cpp  EvoScriptAPI.cpp
Engine/Core/src/Core/: Application.cpp  Engine.cpp  EngineCommands.cpp  EngineMigrators.cpp  EngineResources.cpp  EvoScriptAPI.cpp  Launcher.cpp
Engine/Core/src/Core/Common/: Importers.cpp
Engine/Core/src/Core/GUI/: About.cpp  AnimatorEditor.cpp  ComponentDrawer.cpp  DragNDropHelper.cpp  EditorCamera.cpp  EditorGUI.cpp  EditorGizmo.cpp  EngineSettings.cpp  EngineStatistics.cpp  FileBrowser.cpp  GUISystem.cpp  Guizmo.cpp  Hierarchy.cpp  Inspector.cpp  MaterialEditor.cpp  PhysicsMaterialEditor.cpp  PropertyDrawer.cpp  RenderTechniqueEditor.cpp  SceneRunner.cpp  SceneTools.cpp  SceneViewer.cpp  SoundDebug.cpp  VisualScriptEditor.cpp  WorldEdit.cpp
Engine/Core/src/Core/Parsers/: BlueprintParser.cpp
Engine/Core/src/Core/Settings/: EditorSettings.cpp
Engine/Core/src/Core/States/: ChunkSystem.cpp  ChunkSystemState.cpp  DeltaTimeState.cpp  DrawState.cpp  InitializeState.cpp  PollEventsState.cpp  PrepareState.cpp  SceneUpdateState.cpp  StopState.cpp  SubmitState.cpp
Engine/Core/src/Core/Tests/: TestManager.cpp
Engine/Core/src/Core/UI/: Button.cpp  IButton.cpp
Engine/Core/src/Core/Utils/: GraphicsResourceReloader.cpp
Engine/Core/src/Core/World/: EngineScene.cpp  VisualChunk.cpp  VisualRegion.cpp  World.cpp
Engine/Core/src/GUI/: Canvas.cpp  ComponentDrawer.cpp  EditorGUI.cpp  EngineSettings.cpp  EngineStatistics.cpp  FileBrowser.cpp  GUISystem.cpp  Hierarchy.cpp  Inspector.cpp  SceneViewer.cpp  VisualScriptEditor.cpp  WorldEdit.cpp
Engine/Core/src/Parsers/: BlueprintParser.cpp
Engine/Core/src/World/: VisualChunk.cpp  VisualRegion.cpp  World.cpp
Engine/Dependences/Framework/: CMakeLists.txt  Graphics.cmake  Helper.cmake  Physics.cmake  Scripting.cmake
Engine/Dependences/Framework/Depends/FbxLoader/: CMakeLists.txt
Engine/Dependences/Framework/Depends/easy_profileR/: CMakeLists.txt
Engine/Dependences/Framework/Depends/imgui/: CMakeLists.txt
Engine/Dependences/Framework/Depends/lua/: CMakeLists.txt
Engine/Dependences/Framework/Helper/inc/: Debug.h  GUI.h  macros.h
Engine/Dependences/Framework/Helper/src/: Debug.cpp
Engine/Dependences/Framework/Scripting/inc/: Compiler.h  Script.h
Engine/Dependences/Framework/Scripting/src/: Compiler.cpp  Script.cpp
Engine/UnitTests/: UnitTests.h
Engine/cmake/: Codegen.cmake  InstallPython.cmake  PostBuild.cmake  TargetArchitecture.cmake
(+2105 files in other folders)
