cmake_minimum_required(VERSION 3.16)
project(SREngine)

set(CMAKE_CXX_STANDARD 20)

set(SR_UTILS_STATIC_LIBRARY ON)
set(SR_AUDIO_STATIC_LIBRARY ON)
set(SR_PHYSICS_STATIC_LIBRARY ON)
set(SR_GRAPHICS_STATIC_LIBRARY ON)
set(SR_SCRIPTING_STATIC_LIBRARY ON)

set(SR_TRACY_ENABLE ON)
set(SR_ICU ON)

set(EVO_VULKAN_STATIC_LIBRARY ON)
set(EVO_SCRIPT_STATIC_LIBRARY ON)

add_subdirectory(Engine)
